# sediment-textural-analysis

./: CHANGELOG.md  CITATION.cff  Data_base_EDUCOAST.xlsx  README.md  example_output.xlsx  pyproject.toml  requirements.txt  sediment_textural_analysis.py  sediment_textural_graphical_moments_parameters.py  sediment_textural_graphical_moments_plots.py
docs/: input_data_structure.md  output_description.md  plot_options.md  release_steps.md  workflow.md
examples/: README.md  example_textural_input_phi.csv
scripts/: README.md  csv_to_xlsx.py  csv_to_xlsx_reorder_columns.py
